# dpplibmcu

./: .gitignore  CMakeLists.txt  README.md  TODO.md
build-vscode/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/: DCMakeColors.cmake  DLibInstall.cmake  DLibType.cmake  Findlg.cmake  Findpigpio.cmake  dpplibConfigVersion.cmake  uninstall.cmake.in
cmake copy/: DLibraryType.cmake
doxygen/: CMakeLists.txt  DoxyCustom  DoxyFile  Doxyfile.in  Makefile  README.md  SetupDoxygen.cmake  cmake_install.cmake
drivers/: CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md
examples/DHT/DHT/: DHT.cpp  DHT.hpp
examples/DHT/DHT11/: CMakeLists.txt  DHT.cpp  DHT.hpp  main.cpp
examples/DHT/DHT11/build-vscode/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  dht
examples/DHT/DHT11/build-vscode/.cmake/api/v1/reply/: cache-v2-6d4dd743577b9138cdcd.json  cmakeFiles-v1-82ca7c573d87fac06188.json  codemodel-v2-828e157a003e8d5f906d.json  index-2024-03-23T17-34-34-0034.json  target-dht-Debug-b62594ddbe4a9b0684f2.json
examples/DHT/DHTXXD/: CMakeLists.txt  DHTXXD  DHTnod  DHTnod.c  DHTnod.h  mainnod.c
examples/_ddcmotor/rpi-dcmotor-demo/: CMakeLists.txt  main.cpp
examples/_ddcmotor/rpi-dcmotor-demo/dbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/_ddcmotor/rpi-dcmotor-demo/dbuild/lib/ddcmotor/: Makefile  cmake_install.cmake
examples/_ddcmotorwheels/rpi-wheels-diag/: WheelsDiag.cpp  WheelsDiag.h
examples/_ddigitalbutton/arduino-ide-button-blink/: arduino-ide-button-blink.ino
examples/_ddigitalbutton/arduino-ide-ddigitalbutton-demo/: DDigitalButton.cpp  DMenu.cpp  arduino-ide-ddigitalbutton-demo.ino
examples/_ddigitalbutton/arduino-ide-one-button-menu/: arduino-ide-one-button-menu.ino
examples/_ddigitalinput/rpi-input-demo/build-vscode/: Makefile
examples/_ddigitalinput/rpi-input-demo/build-vscode/.cmake/api/v1/reply/: cache-v2-e3141e96f79998f9be5a.json  codemodel-v2-4b19966214e38698e41b.json  target-rpi-input-output-demo-Debug-61d0a1ca8ccb43c83ce3.json
examples/_ddigitalinput/rpi-input-demo/build-vscode/_dep/libdpp-mcu/: Makefile  cmake_install.cmake
examples/_ddigitalinput/rpi-input-demo/build-vscode/_dep/libdpp-mcu/src/: cmake_install.cmake
examples/_ddigitalinput/rpi-input-demo/build-vscode/_dep/libdpp-mcu/src/dpplib-gpio/: cmake_install.cmake
examples/_dhtxx/rpi-dhtxx-demo/: main.cpp
examples/_dsoftpwm/: dpwmout.ino
examples/_dstepper/: ramp.ino
examples/_mega-demo/: platformio.ini
examples/arduino-mega-demo/src/: main.cpp
examples/ddcmotor/rpi-dcmotor-demo/: CMakeLists.txt  main.cpp
examples/ddcmotor/rpi-dcmotor-demo/dbuild/: rpi-dcmotor-demo
examples/ddcmotor/sbc-dcmotor-demo/: main.cpp
examples/ddcmotorwheels/sbc-wheels-demo/: DNCurses.cpp  DNCurses.h  main.cpp
examples/ddigitalbutton/arduino-ide-ddigitalbutton-demo/: DMenu.h
examples/ddigitalbutton/arduino-vscode-one-button-menu/: platformio.ini
examples/ddigitalbutton/arduino-vscode-one-button-menu/src/: main.cpp
examples/ddigitalinput/rpi-input-demo/: CMakeLists.txt  main.cpp
examples/ddigitalinput/rpi-input-demo/build-vscode/: CMakeCache.txt  cmake_install.cmake  compile_commands.json  rpi-input-output-demo
examples/ddigitalinput/rpi-input-demo/build-vscode/.cmake/api/v1/reply/: cmakeFiles-v1-73f375df0667f1e7d059.json  cmakeFiles-v1-f9b8230d8bfabb49e51e.json  index-2024-03-26T16-19-08-0880.json  index-2024-03-26T17-14-33-0453.json
examples/ddigitalinput/rpi-input-demo/build-vscode/_dep/libdpp-mcu/src/: Makefile
examples/ddigitalinput/rpi-input-demo/build-vscode/_dep/libdpp-mcu/src/ddcmotor/: Makefile
examples/ddigitalinput/rpi-input-demo/build-vscode/_dep/libdpp-mcu/src/ddigitalinput/: Makefile
examples/ddigitalinput/rpi-input-demo/build-vscode/_dep/libdpp-mcu/src/dmpacket/: Makefile
examples/ddigitalinput/rpi-input-demo/build-vscode/_dep/libdpp-mcu/src/dpplib-gpio/: Makefile
examples/ddigitalio/sbc-button-demo/: CMakeLists.txt  main.cpp
examples/ddigitalio/sbc-io-demo/: CMakeLists.txt  main.cpp
examples/dmpacket/: main.cpp
examples/dpwm/sbc-pwm-demo/: main.cpp
examples/dservo/ServoDEMO/: platformio.ini
examples/dservo/ServoDEMO/src/: main.cpp
examples/dservo/arduino-servo-demo/src/: main.cpp
examples/dservo/sbc-servo-demo/: main.cpp
examples/dstepper/: ramp.ino
examples/i2c/sbc-i2c-demo/: i2c-ask.cpp  i2c-bus-info.cpp  i2c-bus-list.cpp  i2c-master.cpp  i2c-scan.cpp  ina226.cpp  ina228.cpp
examples/mega-demo/.pio/libdeps/uno/OLED SSD1306 - SH1106/: .piopm
examples/mega-demo/.pio/libdeps/uno/OLED SSD1306 - SH1106/src/: oled.cpp  oled.h
html/: DArduinoString_8h.html  DArduinoString_8h__incl.map  DArduinoString_8h__incl.md5  DArduinoString_8h_source.html  DDCMotorWheels_8cpp.html  DDCMotorWheels_8cpp__incl.map  DDCMotorWheels_8cpp__incl.md5  DDCMotorWheels_8cpp_source.html  DDCMotorWheels_8h.html  DDCMotorWheels_8h__dep__incl.map  DDCMotorWheels_8h__dep__incl.md5  DDCMotorWheels_8h__incl.map  DDCMotorWheels_8h__incl.md5  DDCMotorWheels_8h_source.html  DDigitalButton_8cpp.html  DDigitalButton_8cpp__incl.map  DDigitalButton_8cpp__incl.md5  DDigitalButton_8cpp_source.html  DDigitalButton_8h.html  DDigitalButton_8h__dep__incl.map  DDigitalButton_8h__dep__incl.md5  DDigitalButton_8h__incl.map  DDigitalButton_8h__incl.md5  DDigitalButton_8h_source.html  DSoftPwmTimer_8h.html  DSoftPwmTimer_8h__dep__incl.map  DSoftPwmTimer_8h__dep__incl.md5  DSoftPwmTimer_8h__incl.map  DSoftPwmTimer_8h__incl.md5  DSoftPwmTimer_8h_source.html  DStepper_8cpp.html  DStepper_8cpp__incl.map  DStepper_8cpp__incl.md5  DStepper_8cpp_source.html  DStepper_8h.html  DStepper_8h__dep__incl.map  DStepper_8h__dep__incl.md5  DStepper_8h__incl.map  DStepper_8h__incl.md5  DStepper_8h_source.html  (+1262 more)
src/dpwm/: CMakeLists.txt  dpwm  library.json  readme.MD
src/dpwm/avr/: CMakeLists.txt  DSoftPwmTimer.h  dpwm.cpp  dpwm.h
src/dpwm/mcu/: dpwm
src/dpwm/mcu/avr/: CMakeLists.old  dpwm  dpwm.cpp  dpwm.h
src/dpwm/mcu/esp32/: CMakeLists.old  dpwm.cpp  dpwm.h
src/dpwm/sbc/: CMakeLists.txt  dpwm  dpwm.cpp  dpwm.h
(+308 files in other folders)
