set(HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/dpwm
)

if(lg_FOUND)
    add_subdirectory(sbc)
else()
    add_subdirectory(avr)
endif()

set(${PROJECT_NAME}_SOURCES "${${PROJECT_NAME}_SOURCES}" ${SOURCES} PARENT_SCOPE)
set(${PROJECT_NAME}_HEADERS "${${PROJECT_NAME}_HEADERS}" ${HEADERS} PARENT_SCOPE)
set(${PROJECT_NAME}_INCLUDE_DIRS "${${PROJECT_NAME}_INCLUDE_DIRS}" ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
